# FlappyBird

./: .gitignore  CMakeLists.txt
headers/: bird.h  breakscene.h  constants.h  engine.h  gameoverscene.h  ghostpipe.h  helperFuntions.h  network.h  pipe.h  print.h  runningscene.h  runningscenebot.h  runningsceneplayer.h  scene.h  sensor.cpp  sensor.h
src/: CMakeLists.txt  bird.cpp  breakscene.cpp  constants.cpp  engine.cpp  engineDraw.cpp  engineUpdate.cpp  gameoverscene.cpp  ghostpipe.cpp  helperFunktions.cpp  main.cpp  network.cpp  pipe.cpp  runningscene.cpp  runningscenebot.cpp  runningsceneplayer.cpp  scene.cpp  sensor.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.h
src/main/: CMakeLists.txt  main.cpp
